third_party/rust/indoc/v1/crate/tests/ui/printdoc-no-named-arg.rs
use indoc::printdoc;

fn main() {
    printdoc!("{named}");
}
